// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "backgroundColor": undefined,
          "paddingBottom": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#C8C7CC",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {},
          false,
        ]
      }
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <RCTSafeAreaView
            style={
              [
                {
                  "backgroundColor": "#FFF",
                },
                {
                  "flexGrow": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "minHeight": 44,
                    "paddingLeft": 15,
                    "paddingRight": 20,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flexGrow": 1,
                        "fontSize": 16,
                        "letterSpacing": -0.32,
                      },
                      {
                        "color": "#007AFF",
                      },
                      {},
                    ]
                  }
                >
                  Help / FAQ
                </Text>
              </View>
            </View>
          </RCTSafeAreaView>
        </View>
        <RCTSafeAreaView
          style={
            [
              {},
              {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "height": 0.5,
                },
                {
                  "backgroundColor": "#C8C7CC",
                  "marginLeft": 15,
                  "marginRight": 0,
                },
              ]
            }
          />
        </RCTSafeAreaView>
      </View>
      <View
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <RCTSafeAreaView
          style={
            [
              {
                "backgroundColor": "#FFF",
              },
              {
                "flexGrow": 1,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                {},
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  [
                    {
                      "flexGrow": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    {
                      "color": "#007AFF",
                    },
                    {},
                  ]
                }
              >
                Contact Us
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#C8C7CC",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 10,
        }
      }
    >
      <RCTSafeAreaView>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontSize": 13,
                "letterSpacing": -0.078,
              },
              {
                "color": "#8E8E93",
              },
              {},
            ]
          }
        >
          All rights reserved.
        </Text>
      </RCTSafeAreaView>
    </View>
  </View>
</View>
`;

exports[`renders with appearance auto 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "backgroundColor": undefined,
          "paddingBottom": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#C8C7CC",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {},
          false,
        ]
      }
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <RCTSafeAreaView
            style={
              [
                {
                  "backgroundColor": "#FFF",
                },
                {
                  "flexGrow": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "minHeight": 44,
                    "paddingLeft": 15,
                    "paddingRight": 20,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flexGrow": 1,
                        "fontSize": 16,
                        "letterSpacing": -0.32,
                      },
                      {
                        "color": "#007AFF",
                      },
                      {},
                    ]
                  }
                >
                  Help / FAQ
                </Text>
              </View>
            </View>
          </RCTSafeAreaView>
        </View>
        <RCTSafeAreaView
          style={
            [
              {},
              {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "height": 0.5,
                },
                {
                  "backgroundColor": "#C8C7CC",
                  "marginLeft": 15,
                  "marginRight": 0,
                },
              ]
            }
          />
        </RCTSafeAreaView>
      </View>
      <View
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <RCTSafeAreaView
          style={
            [
              {
                "backgroundColor": "#FFF",
              },
              {
                "flexGrow": 1,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                {},
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  [
                    {
                      "flexGrow": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    {
                      "color": "#007AFF",
                    },
                    {},
                  ]
                }
              >
                Contact Us
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#C8C7CC",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 10,
        }
      }
    >
      <RCTSafeAreaView>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontSize": 13,
                "letterSpacing": -0.078,
              },
              {
                "color": "#8E8E93",
              },
              {},
            ]
          }
        >
          All rights reserved.
        </Text>
      </RCTSafeAreaView>
    </View>
  </View>
</View>
`;

exports[`renders with appearance dark 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "backgroundColor": undefined,
          "paddingBottom": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#121312",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#2b2b2d",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {},
          false,
        ]
      }
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <RCTSafeAreaView
            style={
              [
                {
                  "backgroundColor": "#121312",
                },
                {
                  "flexGrow": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "minHeight": 44,
                    "paddingLeft": 15,
                    "paddingRight": 20,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flexGrow": 1,
                        "fontSize": 16,
                        "letterSpacing": -0.32,
                      },
                      {
                        "color": "#007AFF",
                      },
                      {},
                    ]
                  }
                >
                  Help / FAQ
                </Text>
              </View>
            </View>
          </RCTSafeAreaView>
        </View>
        <RCTSafeAreaView
          style={
            [
              {},
              {
                "backgroundColor": "#121312",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "height": 0.5,
                },
                {
                  "backgroundColor": "#2b2b2d",
                  "marginLeft": 15,
                  "marginRight": 0,
                },
              ]
            }
          />
        </RCTSafeAreaView>
      </View>
      <View
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <RCTSafeAreaView
          style={
            [
              {
                "backgroundColor": "#121312",
              },
              {
                "flexGrow": 1,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                {},
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  [
                    {
                      "flexGrow": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    {
                      "color": "#007AFF",
                    },
                    {},
                  ]
                }
              >
                Contact Us
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#121312",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#2b2b2d",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 10,
        }
      }
    >
      <RCTSafeAreaView>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontSize": 13,
                "letterSpacing": -0.078,
              },
              {
                "color": "#aeaeae",
              },
              {},
            ]
          }
        >
          All rights reserved.
        </Text>
      </RCTSafeAreaView>
    </View>
  </View>
</View>
`;

exports[`renders with appearance light 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "backgroundColor": undefined,
          "paddingBottom": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#C8C7CC",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {},
          false,
        ]
      }
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <RCTSafeAreaView
            style={
              [
                {
                  "backgroundColor": "#FFF",
                },
                {
                  "flexGrow": 1,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "minHeight": 44,
                    "paddingLeft": 15,
                    "paddingRight": 20,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "flexGrow": 1,
                        "fontSize": 16,
                        "letterSpacing": -0.32,
                      },
                      {
                        "color": "#007AFF",
                      },
                      {},
                    ]
                  }
                >
                  Help / FAQ
                </Text>
              </View>
            </View>
          </RCTSafeAreaView>
        </View>
        <RCTSafeAreaView
          style={
            [
              {},
              {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "height": 0.5,
                },
                {
                  "backgroundColor": "#C8C7CC",
                  "marginLeft": 15,
                  "marginRight": 0,
                },
              ]
            }
          />
        </RCTSafeAreaView>
      </View>
      <View
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <RCTSafeAreaView
          style={
            [
              {
                "backgroundColor": "#FFF",
              },
              {
                "flexGrow": 1,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                {},
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  [
                    {
                      "flexGrow": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    {
                      "color": "#007AFF",
                    },
                    {},
                  ]
                }
              >
                Contact Us
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "height": 0.5,
            },
            {
              "backgroundColor": "#C8C7CC",
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 10,
        }
      }
    >
      <RCTSafeAreaView>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontSize": 13,
                "letterSpacing": -0.078,
              },
              {
                "color": "#8E8E93",
              },
              {},
            ]
          }
        >
          All rights reserved.
        </Text>
      </RCTSafeAreaView>
    </View>
  </View>
</View>
`;
